--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <div class="paper heart">
     </div>
     <div class="paper image">
-      <p> and I fallen in</p>
-        <p>Love with You 😍 </p>
+        <p>uiuiui</p>
+    </div>
+    <div class="paper image">
+      <p> I Love you loads</p>
        <img src="https://iili.io/HSzXpzg.jpg" />
     </div>
     <div class="paper image">
@@ -31,8 +33,8 @@
     <p class="p2">Person 😍</p>
     </div>
     <div class="paper">
-    <p class="p1">You are Cute </p>
-      <p class="p1">Amazing <span style="color: red !important;">❤️</span></p>
+    <p class="p1">You are my Cutupie </p>
+      <p class="p1">and  <span style="color: red !important;">❤️</span></p>
     </div>
     <div class="paper">
     <p class="p1">Drag the papers to move!</p>
