--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
     <div class="paper heart">
     </div>
     <div class="paper image">
-        <p>uiuiui</p>
-    </div>
-    <div class="paper image">
-      <p> I Love you loads</p>
+      <p> I Love you loads ❤️</p>
        <img src="https://iili.io/HSzXpzg.jpg" />
     </div>
     <div class="paper image">
@@ -35,6 +32,14 @@
     <div class="paper">
     <p class="p1">You are my Cutupie </p>
       <p class="p1">and  <span style="color: red !important;">❤️</span></p>
+    </div>
+    <div class="paper image">
+      <p>You're my permanent partner, in everything</p>
+      <img src="/assets/jim_corbett_us.jpeg" />
+    </div>
+    <div class="paper">
+      <p class="p1">A Simple Page To Show Much,</p>
+        <p class="p2">I Love You </p>
     </div>
     <div class="paper">
     <p class="p1">Drag the papers to move!</p>
