--- a/index.html
+++ b/index.html
@@ -13,33 +13,28 @@
     <div class="paper heart">
     </div>
     <div class="paper image">
-      <p> I Love you loads ❤️</p>
-       <img src="https://iili.io/HSzXpzg.jpg" />
+      <p> I Love you Kiddo Meri ❤️🥰😘🙈</p>
+       <img src="./assets/zomaland_us.jpg" />
     </div>
     <div class="paper image">
       <p</p>
-      <img src="https://iili.io/HSzXbmF.jpg" />
+      <img src="./assets/home_us.jpg" />
     </div>
-    <div class="paper image">
-      <p>How can be </p>
-       <p> someone so cute ❤️ </p>
-      <img src="https://iili.io/HSzXyXa.jpg" />
+    <div class="paper img">
+      <p class="p1">Us as Horny as always!🤤🫦</p>
+      <img src="./assets/car_us.jpg"/>
+      </div>
+    <div class="paper img">
+    <p class="p1">Us as The Cutest Couple!🥹💘</p>
+    <img src="./assets/movie_date_us.jpg"/>
     </div>
-    <div class="paper red">
-    <p class="p1"> and My Favorite</p>
-    <p class="p2">Person 😍</p>
-    </div>
-    <div class="paper">
-    <p class="p1">You are my Cutupie </p>
-      <p class="p1">and  <span style="color: red !important;">❤️</span></p>
-    </div>
-    <div class="paper image">
-      <p>You're my permanent partner, in everything</p>
-      <img src="/assets/jim_corbett_us.jpeg" />
+    <div class="paper img">
+      <p>Us as Classy and Cool.😎</p>
+      <img src="./assets/jim_corbett_us.jpeg"/>
     </div>
     <div class="paper">
-      <p class="p1">A Simple Page To Show Much,</p>
-        <p class="p2">I Love You </p>
+      <p class="p1">A Simple Page About US!</p>
+        <p class="p2">Happy Anniversary My Love!</p>
     </div>
     <div class="paper">
     <p class="p1">Drag the papers to move!</p>
